--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,16 +8,21 @@ set(CMAKE_AUTOMOC ON)
 # Instruct CMake to create code from Qt designer ui files
 set(CMAKE_AUTOUIC ON)
 
+set(CMAKE_AUTORCC ON)
+
 # Find the QtWidgets library
 find_package(Qt5Widgets CONFIG REQUIRED)
 
 set(ukuithemecustomizer_SRC
+  src/iniThemeTemplate.qrc
   src/main.cpp
-  src/ukuithemecustomizer.cpp
 )
 
 # Tell CMake to create the helloworld executable
 add_executable(ukuithemecustomizer ${ukuithemecustomizer_SRC})
+
+add_subdirectory(src/packagecreator/)
+add_subdirectory(src/ukuithemecustomizerwindow/)
 
 # Use the Widgets module from Qt 5.
 target_link_libraries(ukuithemecustomizer Qt5::Widgets)
