--- a/src/ukuithemecustomizerwindow/CMakeLists.txt
+++ b/src/ukuithemecustomizerwindow/CMakeLists.txt
@@ -2,4 +2,8 @@ add_library(ukuithemecustomizerwindow STATIC
     ukuithemecustomizerwindow.cpp
     ukuithemecustomizerwindow.ui
 )
-target_link_libraries(ukuithemecustomizerwindow PRIVATE Qt5::Widgets)
+target_link_libraries(ukuithemecustomizerwindow
+    Qt5::Widgets
+    Qt5::Core
+    packagecreator
+)
