--- a/src/packagecreator/CMakeLists.txt
+++ b/src/packagecreator/CMakeLists.txt
@@ -2,4 +2,7 @@ add_library(packagecreator STATIC
     packagecreator.cpp
     packagecreator.ui
 )
-target_link_libraries(packagecreator PRIVATE Qt5::Widgets)
+target_link_libraries(packagecreator
+    Qt5::Widgets
+    Qt5::Core
+)
