primary code for model/view

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,7 +25,7 @@ add_executable(ukuithemecustomizer ${ukuithemecustomizer_SRC})
 add_subdirectory(src/packagecreator/)
 add_subdirectory(src/ukuithemecustomizerwindow/)
 add_subdirectory(src/logger/)
-
+add_subdirectory(src/ukuithemeelement/)
 
 target_link_libraries(ukuithemecustomizer
    Qt5::Core
